--- a/Rebus.AmazonSQS.Tests/Rebus.AmazonSQS.Tests.csproj
+++ b/Rebus.AmazonSQS.Tests/Rebus.AmazonSQS.Tests.csproj
@@ -26,8 +26,9 @@
     <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.1.9" />
     <ProjectReference Include="..\Rebus.AmazonSQS\Rebus.AmazonSQS.csproj" />
-    <PackageReference Include="awssdk.sqs" Version="3.5.1.20" />
+    <PackageReference Include="awssdk.sqs" Version="3.7.0.24" />
     <PackageReference Include="microsoft.net.test.sdk" Version="16.6.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="nunit3testadapter" Version="3.17.0">
