--- a/Rebus.AmazonSQS.Tests/Rebus.AmazonSQS.Tests.csproj
+++ b/Rebus.AmazonSQS.Tests/Rebus.AmazonSQS.Tests.csproj
@@ -4,7 +4,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Rebus.AmazonSQS.Tests</RootNamespace>
     <AssemblyName>Rebus.AmazonSQS.Tests</AssemblyName>
-    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net5.0</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
