--- a/Rebus.AmazonSQS/Rebus.AmazonSQS.csproj
+++ b/Rebus.AmazonSQS/Rebus.AmazonSQS.csproj
@@ -42,6 +42,7 @@
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.1.9" />
     <PackageReference Include="awssdk.sqs" Version="3.7.0.24" />
     <PackageReference Include="Rebus" Version="6.3.1" />
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\artwork\little_rebusbus2_copy-500x500.png">
